--- a/Customer_Attrition.ipynb
+++ b/Customer_Attrition.ipynb
@@ -6,7 +6,7 @@
       "name": "Customer_Attrition.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOYDbai2M5DgRC1exEQ3DGR",
+      "authorship_tag": "ABX9TyOVfcDk6rqBDIT/GGmt5gHE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,6 +47,15 @@
         "Now, this dataset consists of 10,000 customers mentioning their age, salary, marital_status, credit card limit, credit card category, etc. There are nearly 18 features.\n",
         "\n",
         "We have only 16.07% of customers who have churned. Thus, it's a bit difficult to train our model to predict churning customers."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7F8kbdSMzm8H"
+      },
+      "source": [
+        "Work done in this notebook is based on work done by Thomas Konstantin"
       ]
     },
     {
